LaTeX - Fixed some TODOs

--- a/LaTeX/conclusion.tex
+++ b/LaTeX/conclusion.tex
@@ -14,5 +14,5 @@
 		\subsubsection{Curved roads}
 		The generation process outlined in this work requires a two-dimensional grid in which to generate the city. This results in straight roads and rectangular blocks. Generating curved roads would make the city look more interesting and natural. This is another area where procedural mesh generation would be beneficial.
 		
-		\subsubsection{Terrain evaluation}
-		Any city in our application is generated on flat terrain. A popular application of Perlin noise is terrain generation(TODO: ref). By taking the terrain into consideration when generating a city, the two ares of content generation could be combined.
+		\subsubsection{Terrain integration}
+		Any city in our application is generated on flat terrain. A popular application of Perlin noise is terrain generation. By taking the terrain into consideration when generating a city, the two ares of content generation could be combined.
