--- a/LaTeX/method.tex
+++ b/LaTeX/method.tex
@@ -1,7 +1,7 @@
 \section{Method}
 
 	\subsection{City generation method}
-	Most related work focus on one of two things: procedurally generating unique building meshes(TODO: ref) or procedurally generating large cities consisting of similar looking buildings\cite{InfiniteCities}. This work focuses instead on the procedurally generated placement of existing meshes in varied districts. The concept of districts breaks up the repetitive and self-similar nature of city by introducing distinct changes in appearance between them.
+	Most related work focus on one of two things: procedurally generating unique building meshes\cite{PseudoInfiniteCities} or procedurally generating large cities consisting of similar looking buildings\cite{InfiniteCities}. This work focuses instead on the procedurally generated placement of existing meshes in varied districts. The concept of districts breaks up the repetitive and self-similar nature of city by introducing distinct changes in appearance between them.
 
 		\subsubsection{Districts}
 		The generation process starts with the generation of \textit{districts}. A \textit{districts} is an abstract representation of an area of the city. It controls what type of buildings it contains, the minimum and maximum height of these buildings and how densely populated the area is with these buildings. The \textit{districts} have a semi-random deterministic spread across the city. There is no constraints on the distribution of the \textit{districts}. This means that one seed may produce a city where 90\% of the city is made up of one \textit{district}. There are no constraints to prevent this because this would hinder the variability of the cities generated. The \textit{districts} typically have a lot of blocks where no other districts are competing. But at the borders between districts there is a lot more variation, this is referred to as \textit{border competition}. Here a single block may contain buildings from all three \textit{districts}. This was done to avoid hard borders between the \textit{districts}. The hard borders were considered to look strange and may compromise the cities viability in games. The \textit{districts} were deemed important as they provide variation throughout the city.
@@ -115,7 +115,7 @@
 		\end{figure}
 		
 		\subsubsection{Buildings}
-		The final stage of the generation process it the generation of \textit{buildings}. At this point the map contains values that indicate whether a cell is a road or a vacant slot belonging to a \textit{district}. This stage goes through the whole map, skipping over any roads. For each cell that the algorithm visits, three of the \textit{districts} parameters are considered: minimum height, maximum height and density. The algorithm retrieves a Perlin noise value for the cell and compares it against the density threshold to determine whether to place a \textit{buildings} or leave the cell vacant. If a \textit{buildings} is placed, the algorithm uses Perlin noise to choose a bottom, middle and top sections. It chooses these sections from the list of available sections that belong to the \textit{district}. Since the result of Perlin noise is a value between zero and one, it is easy to multiply this result with the number of available sections in order to choose one. The final step of the algorithm determines the height of the \textit{buildings} by multiplying the difference between the maximum height and the minimum height with the result from the Perlin noise and then adding the minimum height. (TODO: Math formula?) The results of the \textit{buildings} generation is not stored in the map, but in a separate list of building sections that can later be rendered. The placement of vacant tiles is stored in the map.
+		The final stage of the generation process it the generation of \textit{buildings}. At this point the map contains values that indicate whether a cell is a road or a vacant slot belonging to a \textit{district}. This stage goes through the whole map, skipping over any roads. For each cell that the algorithm visits, three of the \textit{districts} parameters are considered: minimum height, maximum height and density. The algorithm retrieves a Perlin noise value for the cell and compares it against the density threshold to determine whether to place a \textit{buildings} or leave the cell vacant. If a \textit{buildings} is placed, the algorithm uses Perlin noise to choose a bottom, middle and top sections. It chooses these sections from the list of available sections that belong to the \textit{district}. Since the result of Perlin noise is a value between zero and one, it is easy to multiply this result with the number of available sections in order to choose one. The final step of the algorithm determines the height of the \textit{buildings} by multiplying the difference between the maximum height and the minimum height with the result from the Perlin noise and then adding the minimum height. The results of the \textit{buildings} generation is not stored in the map, but in a separate list of building sections that can later be rendered. The placement of vacant tiles is stored in the map.
 		
 		\begin{figure}
 			\centering
