--- a/LaTeX/citations.bib
+++ b/LaTeX/citations.bib
@@ -1,26 +1,33 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Niclas Olsson at 2017-05-13 09:50:12 +0200 
+%% Created for Niclas Olsson at 2017-05-14 22:41:29 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@book{CurvedRoads,
+	Author = {Rahul Sharma},
+	Date-Added = {2017-05-14 20:40:52 +0000},
+	Date-Modified = {2017-05-14 20:41:18 +0000},
+	Title = {Procedural City Generator}}
+
 @webpage{RandCRT,
 	Date-Added = {2017-05-13 07:49:26 +0000},
 	Date-Modified = {2017-05-13 07:49:59 +0000},
 	Lastchecked = {2017-05-13},
+	Note = {C++ Rand function},
 	Url = {https://msdn.microsoft.com/en-us/library/398ax69y(v=vs.140).aspx},
-	Note = {C++ Rand function}}
+	Bdsk-Url-1 = {https://msdn.microsoft.com/en-us/library/398ax69y(v=vs.140).aspx}}
 
 @webpage{QtWebpage,
 	Date-Added = {2017-05-11 13:14:29 +0000},
 	Date-Modified = {2017-05-11 13:16:48 +0000},
 	Lastchecked = {2017-05-11},
-	Url = {https://www.qt.io},
 	Note = {QT Graphical interface},
+	Url = {https://www.qt.io},
 	Bdsk-Url-1 = {https://www.qt.io}}
 
 @book{TexturingModeling,
@@ -193,8 +200,8 @@
 @online{SpeedTree,
 	Author = {{SpeedTree}},
 	Date = {2017},
-	Url = {http://www.speedtree.com},
 	Note = {Procedural tree generation software},
+	Url = {http://www.speedtree.com},
 	Bdsk-Url-1 = {http://www.speedtree.com}}
 
 @online{SpeedTreeMovies,
@@ -248,12 +255,6 @@
 	Year = {2000}}
 
 @book{ExperimentationInSoftware,
-	author = {{Wohlin, Claes, 1959-
-	Runeson Per 
-	H{\"o}st, Martin 
-	Ohlsson, Magnus C. 
-	Regnell, Bj{\"o}rn 
-	Wesslén, Anders }},
-	title = {Experimentation in software engineering},
-	Year = {2012},
-}
+	Author = {{Wohlin, Claes, 1959- Runeson Per H{\"o}st, Martin Ohlsson, Magnus C. Regnell, Bj{\"o}rn Wessl{\'e}n, Anders }},
+	Title = {Experimentation in software engineering},
+	Year = {2012}}
