LaTeX - Changed to BTH template

--- a/LaTeX/conclusion.tex
+++ b/LaTeX/conclusion.tex
@@ -1,18 +1,17 @@
-\section{Conclusion and future work}
-	\subsection{Conclusion}
-	The conclusion of this work is that Perlin noise can be used to generate cities that are viable in games. The believability depends on what parameters are used when generating a city. However, any city generated with the generation process suggested in this work looks more believable than a city generated at random.
+\section{Conclusion}
+The conclusion of this work is that Perlin noise can be used to generate cities that are viable in games. The believability depends on what parameters are used when generating a city. However, any city generated with the generation process suggested in this work looks more believable than a city generated at random.
 	
-	\subsection{Future work}
-	This section will describe a number of directions for future work.
+\section{Future work}
+This section will describe a number of directions for future work.
 	
-		\subsubsection{More generation parameters}
-		In Elicras, only four parameters are available per district. By providing more parameters, the user would have more control over how the city is generated. A few examples are: proximity between districts, size of the city, \textit{frequencies} and \textit{modifications} for Perlin noise (see Page \pageref{fig:normal-and-modified-perlin}).
+	\subsection{More generation parameters}
+	In Elicras, only four parameters are available per district. By providing more parameters, the user would have more control over how the city is generated. A few examples are: proximity between districts, size of the city, \textit{frequencies} and \textit{modifications} for Perlin noise (see Page \pageref{fig:normal-and-modified-perlin}).
 	
-		\subsubsection{Mesh generation}
-		This work presents a way of generating a large number of buildings from a small number of parts. This technique is still limited by handmade meshes. By generating meshes from scratch, a larger number of unique buildings can be generated. It would also save time by not requiring handmade meshes.
+	\subsection{Mesh generation}
+	This work presents a way of generating a large number of buildings from a small number of parts. This technique is still limited by handmade meshes. By generating meshes from scratch, a larger number of unique buildings can be generated. It would also save time by not requiring handmade meshes.
 		
-		\subsubsection{Curved roads}
-		The generation process outlined in this work requires a two-dimensional grid in which to generate the city. This results in straight roads and rectangular blocks. Generating curved roads would make the city look more interesting and natural. This is another area where procedural mesh generation would be beneficial.
+	\subsection{Curved roads}
+	The generation process outlined in this work requires a two-dimensional grid in which to generate the city. This results in straight roads and rectangular blocks. Generating curved roads would make the city look more interesting and natural. This is another area where procedural mesh generation would be beneficial.
 		
-		\subsubsection{Terrain integration}
-		Any city in our application is generated on flat terrain. A popular application of Perlin noise is terrain generation. By taking the terrain into consideration when generating a city, the two ares of content generation could be combined.
+	\subsection{Terrain integration}
+	Any city in our application is generated on flat terrain. A popular application of Perlin noise is terrain generation. By taking the terrain into consideration when generating a city, the two ares of content generation could be combined.
