LaTeX - Added new york image.

--- a/LaTeX/introduction.tex
+++ b/LaTeX/introduction.tex
@@ -2,9 +2,7 @@ Exploring a huge open world environment is a desirable feature in games. But cre
 \par
 Content creation requires time and resources; these are both scarce, which is why game companies need technology to help with this process. To create large amounts of content without a big workforce algorithmically based solutions exist, Procedural Content Generation (PCG). PCG was in the past used to minimize the disk space required for games. .kkrieger is an  example of this. It has since evolved into a method to minimize workforce required for content. No man\'s sky is an example of a game using PCG to minimize workforce while maximizing content.
 \par
-Procedural content generation is a large subject covering many different techniques. Games such as No Man's Sky\cite{NoMansSky} are using PCG to generate an entire universe of 18 quintillion\cite{NoMansSkyplanets} different planets complete with plants, animals, animations, biomes and sounds. While other games such as Borderlands\cite{Borderlands} uses PCG to generate over 17,750,000 different guns\cite{BorderlandsWeapons}. Civilization IV\cite{CivilizationCompany}, Minecraft\cite{Minecraft} and Spelunky\cite{Spelunky} are examples of games generating different game environments both in 2D and 3D using PCG. Minecrafts world being eight times bigger than the surface of the earth\cite{MinecraftSize}. With enormous amounts of content like these examples it is understandable why handcrafting this would not be feasible and PCG is an attractive creative method.
-\par
-A lot of work has been done in the field of PCG and it has been used within games for a long time. One of the earliest examples of a game using PCG is Elite\cite{Elite} from 1984. But no singular PCG solution has yet to be found, this may be attributed to the vastly different areas of use.
+Procedural content generation is a large subject covering many different techniques. Games such as No Man's Sky\cite{NoMansSky} are using PCG to generate an entire universe of 18 quintillion\cite{NoMansSkyplanets} different planets complete with plants, animals, animations, biomes and sounds. While other games such as Borderlands\cite{Borderlands} uses PCG to generate over 17,750,000 different guns\cite{BorderlandsWeapons}. Civilization IV\cite{CivilizationCompany}, Minecraft\cite{Minecraft} and Spelunky\cite{Spelunky} are examples of games generating different game environments both in 2D and 3D using PCG. Minecrafts world being eight times bigger than the surface of the earth\cite{MinecraftSize}. With enormous amounts of content like these examples it is understandable why handcrafting this would not be feasible and PCG is an attractive creative method. A lot of work has been done in the field of PCG and it has been used within games for a long time. One of the earliest examples of a game using PCG is Elite\cite{Elite} from 1984. But no singular PCG solution has yet to be found, this may be attributed to the vastly different areas of use.
 \par
 In this thesis, the possibility of procedurally generating a city with Perlin noise that would be viable within a game is investigated. An implementation attempting to create such a city will be made and evaluated through a user study along with data collection from the implementation.
 	
