--- a/LaTeX/method.tex
+++ b/LaTeX/method.tex
@@ -5,7 +5,14 @@ Most related work focus on one of two things: procedurally generating unique bui
 	The generation process starts with the generation of \textit{districts}. A \textit{districts} is an abstract representation of an area of the city. It controls what type of buildings it contains, the minimum and maximum height of these buildings and how densely populated the area is with these buildings. The \textit{districts} have a semi-random deterministic spread across the city. There is no constraints on the distribution of the \textit{districts}. This means that one seed may produce a city where 90\% of the city is made up of one \textit{district}. There are no constraints to prevent this because this would hinder the variability of the cities generated. The \textit{districts} typically have a lot of blocks where no other districts are competing. But at the borders between districts there is a lot more variation, this is referred to as \textit{border competition}. Here a single block may contain buildings from all three \textit{districts}. This was done to avoid hard borders between the \textit{districts}. The hard borders were considered to look strange and may compromise the cities viability in games. The \textit{districts} were deemed important as they provide variation throughout the city.
 		
 	\subsection{Blocks}
-	The next stage in the process is the generation of \textit{blocks}. In this work, a \textit{block} is defined as an area enclosed by four roads. Looking at aerial photographs of large cities(TODO: ref) a certain pattern sometimes appear in the way roads are laid out. A few major roads stretches through the city and smaller, perpendicular roads connecting them together. It was decided to mimic this style. Since a \textit{block} is another abstract representation of an area, it is actually the roads that make them up. The first step of generating \textit{blocks} is to generate the main roads running through the city. After the main roads have been generated, smaller roads are generated in between, connecting the main roads together. After all roads have been generated, the city has affectively been divided into a non-uniform grid. Each cell in this grid is a \textit{block}. The size of each \textit{block} depends on what \textit{district} it belongs to.
+	The next stage in the process is the generation of \textit{blocks}. In this work, a \textit{block} is defined as an area enclosed by four roads. Looking at aerial photographs of large cities, like the one in Figure \ref{fig:new-york}, there is a certain pattern in the way roads are laid out. A few major roads stretches through the city and smaller, perpendicular roads connecting them together. It was decided to mimic this style. Since a \textit{block} is another abstract representation of an area, it is actually the roads that make them up. The first step of generating \textit{blocks} is to generate the main roads running through the city. After the main roads have been generated, smaller roads are generated in between, connecting the main roads together. After all roads have been generated, the city has affectively been divided into a non-uniform grid. Each cell in this grid is a \textit{block}. The size of each \textit{block} depends on what \textit{district} it belongs to.
+	
+	\begin{figure}[h]
+		\centering
+		\includegraphics[width=0.9\linewidth]{"Images/new york"}
+		\caption{Aerial photograph of New York from above.}
+		\label{fig:new-york}
+	\end{figure}
 		
 	\subsection{Buildings}
 	The final stage is the generation of \textit{buildings}. Each \textit{buildings} is made up of three meshes: the bottom, middle and top meshe. By dividing a building into sections, it is possible to assemble different pieces and generate new \textit{buildings}. This is a powerful way to use combinatorics to generate more content. For example, creating two \textit{buildings} would result in two unique \textit{buildings}. Whereas creating two bottom, middle and top sections would result in eight unique \textit{buildings}. Upon generation of a \textit{building}, the attributes of its \textit{district} is taken into consideration. What sections to combine, the minimum and maximum height as well as the density of \textit{buildings}, is all dictated by the \textit{district}.
@@ -186,7 +193,7 @@ To explore the procedural generation of a city, a desktop application was create
 	\begin{itemize}
 		\item Building minimum height (1-10)
 		\item Building maximum height (1-10)
-		\item Density (0-1)
+		\item Density (0.0-1.0)
 		\item Block size (1-10)
 	\end{itemize}
 	All the independent variables are connected to different districts and can thereby vary throughout the city. Minimum and maximum height decides between what heights all the buildings in that district may be. Density is what decides how many buildings there will be. Block size controls how tightly the roads are placed which in turn decides how big each block in the city is. The dependent variables are if the participant believes if the city is viable in games and if the participants notice any coherent patterns or believes the generated cities are random.
