LaTeX - Added questionnaire back in experiment design. Added tab command in thesis.tex

--- a/LaTeX/method.tex
+++ b/LaTeX/method.tex
@@ -218,7 +218,34 @@ To explore the procedural generation of a city, a desktop application was create
 	\subsection{Questionnaire form} \label{ssssec:questionnaire}
 	This is a study of how you perceive different generated cities. All answers are completely anonymous. Images of five different generated cities will be shown to you and we ask that you answer a questionnaire about these images. Each image has a number associated with it. Answer the questionnaire by simply drawing a circle around one of the numbers representing the image that you believe is the best answer to the question.
 			
-	% Put the questions here
+	\begin{enumerate}
+		\item How often do you play games? (1 answer)\\
+		At Least once a:	\tab Week \tab Month \tab Less than once a month
+		
+		\item Which city looks the most random? (1 answer)\\
+		\tab 1 \tab 2 \tab 3 \tab 4 \tab 5
+		
+		\item Which city looks most natural? (1 answer)\\
+		\tab 1 \tab 2 \tab 3 \tab 4 \tab 5
+		
+		\item Which city looks least natural? (1 answer)\\
+		\tab 1 \tab 2 \tab 3 \tab 4 \tab 5
+		
+		\item Which city (if any) could be used in a game (0-5 answers)\\
+		\tab 1 \tab 2 \tab 3 \tab 4 \tab 5
+		
+		\item Which city looks the most repetitive? (1 answer)\\
+		\tab 1 \tab 2 \tab 3 \tab 4 \tab 5
+		
+		\item Which city is the prettiest? (1 answer)\\
+		\tab 1 \tab 2 \tab 3 \tab 4 \tab 5
+		
+		\item Which city is the ugliest? (1 answer)\\
+		\tab 1 \tab 2 \tab 3 \tab 4 \tab 5
+		
+		\item Which city has the best road network? (1 answer)\\
+		\tab 1 \tab 2 \tab 3 \tab 4 \tab 5
+	\end{enumerate}
 		
 	\subsection{Experiment Execution planning}
 	The experiment will be executed as follows: In the offline user study, one participant will answer the questionnaire at a time. If the participants have any questions a supervisor will be close by. The participants are handed the images of the cities along with the questionnaire. Anyone at the BTH’s facilities may be asked to participate. The goal is to have 20 questionnaires answered fully. A complementary online questionnaire will also be available for participants outside the facilities to answer.
