--- a/LaTeX/thesis.tex
+++ b/LaTeX/thesis.tex
@@ -29,6 +29,10 @@
 \newtheorem{ex}{\textbf{Example}}[chapter]
 \newtheorem{qu}{\textbf{Question}}[chapter]
 
+\newcommand\tab[1][1cm]{\hspace*{#1}} % Add \tab :D
+
+
+
 \begin{document}
 
 \pagestyle{plain}
