LaTeX - Added references

--- a/LaTeX/citations.bib
+++ b/LaTeX/citations.bib
@@ -1,12 +1,30 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Niclas Olsson at 2017-05-14 22:41:29 +0200 
+%% Created for Niclas Olsson at 2017-05-15 22:41:27 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@webpage{Batman,
+	Date-Added = {2017-05-15 20:41:18 +0000},
+	Date-Modified = {2017-05-15 20:41:25 +0000},
+	Lastchecked = {2015-05-15},
+	Url = {http://rocksteadyltd.com/#arkham-knight}}
+
+@webpage{GTA,
+	Date-Added = {2017-05-15 20:39:40 +0000},
+	Date-Modified = {2017-05-15 20:39:57 +0000},
+	Lastchecked = {2015-05-15},
+	Url = {http://www.rockstargames.com/V/}}
+
+@webpage{Kkrieger,
+	Date-Added = {2017-05-15 20:37:53 +0000},
+	Date-Modified = {2017-05-15 20:38:19 +0000},
+	Lastchecked = {2017-05-15},
+	Url = {https://web.archive.org/web/20120204065621/http://www.theprodukkt.com/kkrieger}}
 
 @book{CurvedRoads,
 	Author = {Rahul Sharma},
